fix(api): 47-controller Page-in-data anti-pattern eliminated — list endpoints now return data as array
User hit a React crash at /reinsurance: `(classesQuery.data ?? []).map is
not a function`. Root cause was systemic — every list endpoint in the
backend was serialising Spring's full Page<T> object into `data`, leaving
data as a paginated wrapper instead of the array the frontend expected.

The frontend's `(q.data ?? []).map(...)` saw an object (not array, not
nullish), so the ?? shortcut didn't fire and .map blew up.

Scope (47 controllers across 11 modules):
- cia-setup × 15 — vehicles, access groups, brokers, branches, products,
  classes-of-business, currencies, banks, surveyors, sbus, insurance/
  reinsurance companies, relationship managers, cause-of-loss, claim
  reserve categories, approval groups
- cia-audit × 4 — audit log, login audit, audit reports, audit alerts
- cia-finance × 5 — journal entries + receipts/payments/debit notes/credit notes
- cia-customer × 1, cia-policy × 1, cia-quotation × 1
- cia-claims × 4 — claim list/search/reserves + comments + documents + expenses
- cia-endorsement × 1
- cia-reinsurance × 3 — treaties, allocations, fac covers
- cia-partner-api × 3 — apps, products, webhooks
- cia-documents × 1 — templates

Canonical pattern after the fix:
  Page<X> page = service.list(...);
  return ApiResponse.success(page.getContent(), meta);  // returns ApiResponse<List<X>>

Return-type signatures swapped Page<X> → List<X>; java.util.List imported
where missing (and unused Page imports cleaned from 13 files); the special
case in ClaimController.reserves() (was wrapping a List in PageImpl just
to satisfy a Page<T> return type) was simplified to .toList().

Frontend fallout: 5 callers had bandaged the broken shape with
`res.data.data.content ?? []`; updated to `res.data.data ?? []`. Comment
in packages/api-client/src/modules/audit.ts updated to describe the
canonical shape going forward.

Pre-existing breakage cleared as a side-effect: 3 cia-fi